Updated views and models

--- a/templates/posts/post_form.html
+++ b/templates/posts/post_form.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 <div class="container">
-    <h1>This is post detail view</h1>
-        {{ object.title }}
+    <h1>This is the update view</h1>
 </div>    
 {% endblock content %}
