--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -19,11 +19,34 @@
             </div>
             <hr />
             <div>
-            <h4>Enjoy this post? Give it a like</h4>   
-            <a class='text-muted' href="#">
-            <i class="fas fa-thumbs-up fa-lg"></i> 
-            {{ object.get_like_count }}
-            </a>
+                <h4>Enjoy this post? Give it a like</h4>   
+                <a class='text-muted' href="{{ object.get_like_url }}">
+                <i class="fas fa-thumbs-up fa-lg"></i> 
+                {{ object.get_like_count }}
+                </a>
+                <hr />
+                {% if request.user.is_authenticated %}
+                    <h4>Leave a comment below</h4>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button class='btn btn-primary' type='submit'>Comment</button>
+                    </form>   
+                    <hr />
+                    <h5>Comments</h5>
+                    {% for comment in object.comments %}
+                        <div>
+                            <p>{{ comment.content }}
+                            <br />
+                            <small>{{ comment.timestamp|timesince }} ago</small>
+                            </p>
+                        </div>
+                        <hr />
+                    {% endfor %}
+                {% else %}
+                <h4></h4>
+                <a href="{% url 'account_login' %}" class="btn btn-primary"  style="display: block;">Login to comment </a>
+                {% endif %}
             </div>
     </div>
     </div>    
